Dark mode probelm solved in the Header and Mobile menu

--- a/style.css
+++ b/style.css
@@ -81,22 +81,6 @@ input {
     opacity: 0.4;
 }
 
-/* .form form label {
-    font-size: 16px;
-    margin-bottom: 4px;
-} */
-
-/* .form form input {
-    width: 100%;
-    height: 42px;
-    padding-left: 12px;
-    font-size: 15px;
-    line-height: 22px;
-    background: rgba(255, 255, 255, 0.09);
-    color: rgba(255, 255, 255, 0.4);
-    border-radius: 4px;
-} */
-
 .form form input[type='checkbox'] {
     width: 16px;
     margin-right: 15px;
@@ -207,11 +191,16 @@ input {
     color: #000;
 }
 
+.dark .mobile-menu .icon i {
+    color: #fff;
+}
+
 .show-mobile-menu {
     display: block;
     position: fixed;
     min-height: 100vh;
     z-index: 999;
+    background: #060A0C;
 }
 
 /*########
